--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.826.0",
+    "@aws-sdk/s3-request-presigner": "^3.826.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
@@ -34,11 +36,14 @@
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
+    "multer-s3": "^3.0.1",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.24",
+    "typeorm-naming-strategies": "^4.1.0",
     "typeorm-transactional": "^0.5.0"
   },
   "devDependencies": {
